# hacker-pigeon

./: .gitignore  Cargo.toml  GAME_DESIGN.md  README.md  Trunk.toml  index.html  initializer.mjs  main.css
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
assets/: palette.aseprite
assets/config/: game.config.json  game_config.ron
assets/enemies/: drone.aseprite  drone_ball.aseprite
assets/pigeon/: drop.aseprite  flying.aseprite
assets/pigeon/drop/: drop.aseprite
assets/pigeon/flying/: flying.aseprite  spritesheet.json
assets/world/: world.aseprite
assets/world/sky/: world.aseprite
docs/: GAME_DESIGN.md
src/: animation.rs  args.rs  asset_loader.rs  combat.rs  components.rs  config.rs  constants.rs  enemy.rs  game_state.rs  health.rs  input.rs  main.rs  old_main.rs  physics.rs  player.rs  score.rs  ui.rs  world.rs
src/ui/: game_over.rs  health_ui.rs  main_menu.rs  mod.rs  score_ui.rs
